--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "ttp-project",
   "private": true,
-  "version": "0.0.0",
+  "author": "Javier Garin",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
